--- a/bacs200/travel/index.html
+++ b/bacs200/travel/index.html
@@ -1,83 +1,184 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="davi8791.css" rel="stylesheet">
+    <link rel="icon" href="images/icon.ico">
+    <!--Change-->
 
-<meta charset="utf-8">
-<title>Colorlib | Free Bootstrap Website Template</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-<meta name="robots" content="noindex, nofollow" />
+    <title>Skywalker Travel's</title>
 
-<link href="assets/css/A.bootstrap.min.css+template.css+fa.min.css+gfonts.min.css,Mcc.LI5f1xXhbm.css.pagespeed.cf.G00NPyYGCq.css" rel="stylesheet" media="screen" />
-<script>if ( top !== self ) top.location.replace( self.location.href );// Hey, don't iframe my iframe!</script>
+    <style>
+        .fakeimg {
+            height: 200px;
+            background: #aaa;
+        }
 
+        .bg-green {
+            background-color: #329a86;
+        }
 
-<!--[if lt IE 9]>
-		<script>/*@cc_on'abbr article aside audio canvas details figcaption figure footer header hgroup mark meter nav output progress section summary subline time video'.replace(/\w+/g,function(n){document.createElement(n)})@*/</script>
-	<![endif]-->
+        .bg-gray {
+            background-color: #DDDDDD;
+        }
 
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
-<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
+        .txt-green {
+            color: #329a86;
+        }
 
-	  gtag('config', 'UA-23581568-13');
-	</script>
+        .txt-faded {
+            color: #CCCCEE;
+        }
+
+        body {
+            margin: 68px 0px 0px 0px;
+        }
+    </style>
+
+    <!--Change-->
 </head>
 <body>
 
-<header class="switcher-bar ssss clearfix">
+    <header class="navbar navbar-expand flex-column flex-md-row bd-navbar fixed-top">
+        <h1 class="navbar-brand mr-0 mr-md-2 nav-item text-mediumseagreen" style="font-size:28px;">davi8791.github.io</h1>
+        <div class="navbar-nav-scroll">
+            <ul class="navbar-nav bd-navbar-nav flex-row">
+                <li class="nav-item">
+                    <a class="nav-link" href="https://davi8791.github.io">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="profile.html">Profile</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://github.com/davi8791/davi8791.github.io">GitHub</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://shrinking-world.com/course/bacs200">Course Page</a>
+                </li>
+            </ul>
+        </div>
+    </header>
 
-<div class="logo textual pull-left">
-<a href="https://colorlib.com/wp/templates/" title="Switcher">
-<img src="assets/img/xlogo.png.pagespeed.ic.ICv6ugye0D.png" alt="Colorlib logo">
-</a>
-</div>
+    <!--Change-->
 
-<div class="product-switcher pull-left">
-<a href="#" title="Select a Product">
-Select a Product <span>+</span>
-</a>
-</div>
+    <div class="text-center bg-green m-0 container-fluid p-5">
+        <img src="images/nonprofit/logo.png" alt="logo" width="400" />
+    </div>
+    <div class="container-fluid bg-gray">
+        <div class="container-fluid p-5" style="width:50%;">
+            <div id="demo" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+                    <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+                    <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+                    <button type="button" data-bs-target="#demo" data-bs-slide-to="3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="images/nonprofit/khan-academy-1.png" alt="Khan Academy Picture 1" class="d-block w-200" style="width: 100%; height: 450px;">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/nonprofit/khan-academy-2.png" alt="Khan Academy Picture 2" class="d-block w-200" style="width: 100%; height: 450px; ">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/nonprofit/khan-academy-3.jpg" alt="Khan Academy Picture 3" class="d-block w-200" style="width: 100%; height: 450px; ">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/nonprofit/khan-academy-4.jpg" alt="Khan Academy Picture 4" class="d-block w-200" style="width: 100%; height: 450px; ">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon"></span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+                    <span class="carousel-control-next-icon"></span>
+                </button>
+            </div>
+        </div>
+    </div>
 
-<div class="remove-btn header-btn pull-right">
-<a href="#" title="Close this bar" class="icon-remove"></a>
-</div>
+    <div class="container-fluid text-center text-light bg-green p-5">
+        <h1>
+            Mission
+        </h1>
+        <br />
+        <h4>
+            Khan Academy's mission is to provide a free, world‑class education for anyone, anywhere.
+        </h4>
+        <br />
+        <p>
+            Khan Academy works hard to provide free learning resources such as instructional videos and lessons to people all across the globe.
+            Rather than focusing on preparing students for exams or tests, they focus on skill mastery. Khan Academy covers a large range of subjects
+            from math, physics, and computer science to arts, history, and economics!
+        </p>
+    </div>
 
-<div class="purchase-btn header-btn pull-right">
-<a href="#" title="Buy now" class="icon-shopping-cart"></a>
-</div>
+    <div class="container-fluid bg-gray p-5">
+        <div class="row">
+            <div class="col-lg-7">
+                <h1>Their Strategies</h1>
+                <ul>
+                    <li>Khan Academy believes in a free, world-class education for anyone, anywhere. Instead of ads or subscriptions, they are supported by individual contributions from generous people across the world with the same vision as them.</li>
+                    <li>They focus on skill mastery to help learners establish strong foundations, so there's no limit to what people can learn next!</li>
+                    <li>They are working hard to ensure that Khan Academy empowers coaches of all kinds to better understand what their children or students are up to and how best to help them.</li>
+                </ul>
+            </div>
+            <div class="col-sm-4">
+                <h4>
+                    <em>90% of teachers and students who have used Khan Academy report it is an effective learning resource, more than any other core curriculum online learning resource.</em>
+                </h4>
+                <br />
+                <h4>
+                    <em>85% of first and second year college students who have used Khan Academy say it has helped them prepare for college.</em>
+                </h4>
+                <br />
+                <h4>
+                    <em>88% of teachers find Khan Academy trustworthy.</em>
+                </h4>
+            </div>
+        </div>
+    </div>
 
-<div class="mobile-btn header-btn pull-right hidden-xs">
-<a href="#" title="Smartphone View" class="icon-mobile-phone"></a>
-</div>
+    <div class="container-fluid text-light bg-green p-5">
+        <h1>How you can help!</h1>
+        <ul>
+            <li>Donate! Khan Academy is able to continue growing because of generous people like you!</li>
+            <li>Help spread the word by telling your friends, family, or even schools and universities about Khan Academy!</li>
+            <li>Carry on their vision by educating others, and never stop learning!</li>
+        </ul>
+    </div>
 
-<div class="tablet-btn header-btn pull-right hidden-xs">
-<a href="#" title="Tablet View" class="icon-tablet"></a>
-</div>
+    <nav class="navbar navbar-expand-sm bg-gray text-dark">
+        <div class="container">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="https://khanacademy.org">Visit Website</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://www.khanacademy.org/about">Learn More</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://www.khanacademy.org/donate">Donate</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
-<div class="desktop-btn header-btn pull-right hidden-xs">
-<a href="#" title="Desktop View" class="icon-desktop"></a>
-</div>
-</header>
+    <!--Change-->
 
-<section class="switcher-body">
-<a href="#" title="Prev" class="icon-chevron-left products-prev"></a>
-<div class="products-wrapper">
-<div class="products-list clearfix">
-</div>
-</div>
-<a href="#" title="Next" class="icon-chevron-right products-next"></a>
-</section>
-
-<iframe class="product-iframe" frameborder="0" border="0"></iframe>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="assets/js/products.js.pagespeed.ce.KT2oP7Ukqr.js"></script>
-<script src="assets/js/application.min.js.pagespeed.ce.k53sHKSrpA.js"></script>
-
-</div>
-<script defer src="https://static.cloudflareinsights.com/beacon.min.js" data-cf-beacon='{"rayId":"6a99cdd7a1080f02","token":"cd0b4b3a733644fc843ef0b185f98241","version":"2021.10.0","si":100}'></script>
-<script defer src="https://static.cloudflareinsights.com/beacon.min.js" data-cf-beacon='{"rayId":"6a99cdd77cd60f02","token":"cd0b4b3a733644fc843ef0b185f98241","version":"2021.10.0","si":100}'></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+            integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+            integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+            crossorigin="anonymous"></script>
 </body>
-</html>
