--- a/bacs200/travel/index.html
+++ b/bacs200/travel/index.html
@@ -53,13 +53,13 @@
   <!-- The slideshow/carousel -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="https://lh3.googleusercontent.com/proxy/8rLHW1SR4j_P1As9h28tWrZzvVNKezZlIXOCyzkl-7_sL-rVBtjf2anwSyA6hAsXT9CBVkcDCfRFMKi6bXw1SqD6p8-KwF7RE2mjHniWVJ5klYE19nJAlbRfq58tGWAOfoV03EnRjcYtWzSezOH0" alt="Los Angeles" class="d-block w-100">
+      <img src="https://lh3.googleusercontent.com/proxy/8rLHW1SR4j_P1As9h28tWrZzvVNKezZlIXOCyzkl-7_sL-rVBtjf2anwSyA6hAsXT9CBVkcDCfRFMKi6bXw1SqD6p8-KwF7RE2mjHniWVJ5klYE19nJAlbRfq58tGWAOfoV03EnRjcYtWzSezOH0" alt="Los Angeles" style="width:500px;height:600px;">
     </div>
     <div class="carousel-item">
-      <img src="https://2.bp.blogspot.com/-79UgzNjCbFA/U6d0M5LE8pI/AAAAAAAAX7w/JoSsqKhfWfY/s1600/cloud-city-concept-art-empire-strikes-back.jpg" alt="Chicago" class="d-block w-100">
+      <img src="https://2.bp.blogspot.com/-79UgzNjCbFA/U6d0M5LE8pI/AAAAAAAAX7w/JoSsqKhfWfY/s1600/cloud-city-concept-art-empire-strikes-back.jpg" alt="Chicago" style="width:500px;height:600px;">
     </div>
     <div class="carousel-item">
-      <img src="https://cdna.artstation.com/p/assets/images/images/002/537/310/large/oleksandr-pazurenko-tatooine.jpg?1462880426" alt="New York" class="d-block w-100">
+      <img src="https://cdna.artstation.com/p/assets/images/images/002/537/310/large/oleksandr-pazurenko-tatooine.jpg?1462880426" alt="New York" style="width:500px;height:600px;">
     </div>
   </div>
 
