--- a/bacs200/travel/index.html
+++ b/bacs200/travel/index.html
@@ -59,7 +59,7 @@
       <img src="https://2.bp.blogspot.com/-79UgzNjCbFA/U6d0M5LE8pI/AAAAAAAAX7w/JoSsqKhfWfY/s1600/cloud-city-concept-art-empire-strikes-back.jpg" alt="Chicago" class="d-block w-100">
     </div>
     <div class="carousel-item">
-      <img src="https://cdna.artstation.com/p/assets/images/images/002/537/310/large/oleksandr-pazurenko-tatooine.jpg?1462880426" alt="New York" class="d-block w-100" class="d-block h-50">
+      <img src="https://cdna.artstation.com/p/assets/images/images/002/537/310/large/oleksandr-pazurenko-tatooine.jpg?1462880426" alt="New York" class="d-block w-100">
     </div>
   </div>
 
